--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
   ],
   "require": {
     "php": ">=7.0.0",
-    "laravel/framework": "~5.5"
+    "laravel/framework": "~5.5",
+    "guzzlehttp/guzzle": "^6"
   },
   "autoload": {
     "psr-4": {
